src/styles/documentItem.css
.c-documents .c-documents--item {
  margin-bottom: 30px;
  text-align: left;
  width: 100%;
  border: 2px solid transparent;
}

.c-documents .c-documents--content {
  cursor: pointer;
  position: relative;
}

.c-documents--item:hover {
  border: 2px solid #ed6000;
}

.c-documents--content .icon {
  top: 50%;
  margin-top: -35px;
}

.c-documents .c-documents--text {
  padding: 15px 15px 15px 70px;
  width: 50%;
  display: inline-block;
}

@media (max-width: 900px) {
  .c-documents .c-documents--text {
    width: 92%;
  }

  .c-documents .c-documents--tag {
    width: 100%;
    padding-top: 0px;
  }
}

.c-documents--text h3 {
  font-weight: lighter;
  margin: 5px 0;
}

.c-documents--text h2 {
  font-weight: 600;
  margin: 5px 0;
}

.c-documents--tag {
  width: 45%;
  padding-right: 45px;
  padding-top: 35px;
  padding-bottom: 10px;
  float: right;
  display: flex;
  justify-content: flex-end;
  flex-wrap: wrap;
}

.c-documents--tag div {
  display: inline-block;
 }

.c-documents--tag div .c-container {
  width: auto;
  margin: 5px;
}

.c-documents .c-button {
  background: #eeeeee;
  padding: 7px;
}

.c-documents .c-button--text {
  min-width: 35px;
  line-height: 10px;
}

.c-documents .c-documents--dropdown {
  position: absolute;
  top: 0;
  right: 0;
  width: 50px;
  height: 50px;
  border: none;
  outline: none;
  background: transparent;
}

.c-details .c-container {
  margin-top: 2px;
}

.c-details .c-details--content {
  padding: 10px;
  background: #eeeeee;
}

.c-details .c-details--text {
  margin-bottom: 10px;
}

.c-details .c-details--snippets {
  margin-bottom: 10px;
  font-style: italic;
  font-weight: lighter;
  padding-right: 52px;
}

.c-details h3, p {
  margin: 5px;
  font-weight: normal;
}

.c-details .icon {
  position: relative;
  display: inline-block;
}

.c-documentList {
  padding: 1px;
  max-height: calc(100vh - 200px);
  overflow: auto;
}

@media (max-width: 768px) {
  .c-documents .c-button {
    font-size: small;
  }

  .c-documents--text h2 {
    font-size: larger;
  }

  .c-documents--text h3 {
    font-size: small;
  }

  .c-details h3, p  {
    font-size: small;
  }
}

